@@ -6,60 +6,32 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 public class CorsConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-
-
-        // Permitir múltiples orígenes
-        configuration.addAllowedOrigin("https://orderly-api-b53514e40ebd.herokuapp.com");
-
-        // Permitir múltiples orígenes
-        configuration.setAllowedOriginPatterns(Arrays.asList(
+        CorsConfiguration c = new CorsConfiguration();
+        c.setAllowedOriginPatterns(List.of(
                 "http://localhost:*",
                 "http://127.0.0.1:*",
-                "https://*.github.io",
-                "https://*.netlify.app",
-                "https://*.vercel.app",
-                "file://*" // Para pruebas locales con archivos HTML directos
+                // agrega aquí tu front en producción si aplica, por ejemplo:
+                // "https://tu-frontend.com",
+                // "https://*.netlify.app",
+                // "https://*.github.io"
+                // Si alguna vez sirves el front desde file://, podrías añadir "null"
+                // pero es mejor NO usar file:// en desarrollo.
+                "null"
         ));
+        c.setAllowedMethods(List.of("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
+        c.setAllowedHeaders(List.of("Content-Type","Authorization","X-Requested-With"));
+        c.setAllowCredentials(true); // imprescindible para cookies
+        c.setMaxAge(3600L);          // cachea preflights 1h
 
-        // Métodos HTTP permitidos
-        configuration.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"
-        ));
-
-        // Headers permitidos (importante para CORS)
-        configuration.setAllowedHeaders(Arrays.asList(
-                "Content-Type",
-                "Authorization",
-                "X-Requested-With",
-                "Accept",
-                "Origin",
-                "Access-Control-Request-Method",
-                "Access-Control-Request-Headers"
-        ));
-
-        // Headers que el cliente puede leer
-        configuration.setExposedHeaders(Arrays.asList(
-                "Access-Control-Allow-Origin",
-                "Access-Control-Allow-Credentials"
-        ));
-
-        // CRÍTICO: Permite cookies/credenciales
-        configuration.setAllowCredentials(true);
-
-        // Cache de preflight requests (1 hora)
-        configuration.setMaxAge(3600L);
-
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-
-        return source;
+        UrlBasedCorsConfigurationSource s = new UrlBasedCorsConfigurationSource();
+        s.registerCorsConfiguration("/**", c);
+        return s;
     }
+
 }
